--- a/portfolio/scss/_header.scss
+++ b/portfolio/scss/_header.scss
@@ -3,7 +3,7 @@
 .header {
   &__content {
     display: flex;
-    gap: 30px;
+    gap: 31px;
     align-items: center;
     padding-block: 20px;
   }
@@ -16,7 +16,7 @@
 
   &__nav-list {
     display: flex;
-    gap: 30px;
+    gap: 31px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -25,6 +25,7 @@
   &__lang-toggler {
     display: flex;
     gap: 9px;
+    margin-right: -1px;
     font-weight: 700;
     font-size: 20px;
     line-height: 50px;
